--- a/style_dashboard.css
+++ b/style_dashboard.css
@@ -1,71 +1,75 @@
 body {
-    background: #599fd9;
-    background-image: linear-gradient( 135.9deg,  rgb(80, 135, 255) 16.4%, rgb(99, 129, 228) 56.1% );
-    min-height: 100vh;
-    overflow-x: hidden;
-    color:rgb(134, 134, 134);
-  }
-   .vertical-nav {
-    min-width: 17rem;
-    width: 17rem;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
-    transition: all 0.4s;
-  }
-  .page-content {
-    width: calc(100% - 17rem);
-    margin-left: 17rem;
-    transition: all 0.4s;
-  } 
-  
-  #sidebar.active {
+  background: #599fd9;
+  background-image: linear-gradient( 135.9deg,  rgb(80, 135, 255) 16.4%, rgb(99, 129, 228) 56.1% );
+  min-height: 100vh;
+  overflow-x: hidden;
+  color:rgb(134, 134, 134);
+}
+  .vertical-nav {
+  min-width: 17rem;
+  width: 17rem;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.4s;
+}
+.page-content {
+  width: calc(100% - 17rem);
+  margin-left: 17rem;
+  transition: all 0.4s;
+} 
+
+#sidebar.active {
+  margin-left: -17rem;
+}
+
+#content.active {
+  width: 100%;
+  margin: 0;
+}
+
+.separator {
+  margin: 3rem 0;
+  border-bottom: 1px dashed #fff;
+}
+
+.text-uppercase {
+  letter-spacing: 0.1em;
+}
+.text-gray {
+  color: #aaa;
+}
+.nav-link{
+    text-transform: capitalize;
+}
+.nav-link:hover{
+    background:#f3f2f2;
+}
+.text-primary{
+    color:#7579e7 !important;
+}
+@media (max-width: 768px) {
+  #sidebar {
     margin-left: -17rem;
   }
-  
-  #content.active {
+  #sidebar.active {
+    margin-left: 0;
+  }
+  #content {
     width: 100%;
     margin: 0;
   }
-  
-  .separator {
-    margin: 3rem 0;
-    border-bottom: 1px dashed #fff;
+  #content.active {
+    margin-left: 17rem;
+    width: calc(100% - 17rem);
   }
-  
-  .text-uppercase {
-    letter-spacing: 0.1em;
-  }
-  .text-gray {
-    color: #aaa;
-  }
-  .nav-link{
-      text-transform: capitalize;
-  }
-  .nav-link:hover{
-      background:#f3f2f2;
-  }
-  .text-primary{
-      color:#7579e7 !important;
-  }
-  @media (max-width: 768px) {
-    #sidebar {
-      margin-left: -17rem;
-    }
-    #sidebar.active {
-      margin-left: 0;
-    }
-    #content {
-      width: 100%;
-      margin: 0;
-    }
-    #content.active {
-      margin-left: 17rem;
-      width: calc(100% - 17rem);
-    }
-  }
+}
+
+.btn-outline-secondary{
+margin-top: 25px;
+}
   
   
     
