--- a/style_dashboard.css
+++ b/style_dashboard.css
@@ -48,7 +48,7 @@ body {
     background:#f3f2f2;
 }
 .text-primary{
-    color:#7579e7 !important;
+    color:#727272 !important;
 }
 @media (max-width: 768px) {
   #sidebar {
