--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ font-family: sans-serif;
   .container {
     position: absolute;
     max-width: 800px;
-    height: 500px;
+    height: 600px;
     margin: auto;
     top: 50%;
     left: 50%;
@@ -119,7 +119,7 @@ font-family: sans-serif;
   } 
   .myForm {
     position: relative;
-    margin-top: 50px;
+    margin-top: 70px;
   } 
   .leftCont .butt {
     background: linear-gradient(45deg, #211685, #2d37c4);
@@ -165,5 +165,11 @@ font-family: sans-serif;
       margin-top:10px;
       color: #000000;
       
+  }
+
+  .alert{
+    margin-top: 5%;
+    width: 100%;
+    height: 3.3em;
   }
   
