--- a/style.css
+++ b/style.css
@@ -172,4 +172,8 @@ font-family: sans-serif;
     width: 100%;
     height: 3.3em;
   }
-  
+input[type=number]::-webkit-inner-spin-button, /*krywanie inkrementacji wartości w polu PESEL*/
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
