--- a/style.css
+++ b/style.css
@@ -1,45 +1,3 @@
-/* body{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    background-color: slategray;
-}
-.box{
-    width: 600px;
-    padding: 60px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -40%);
-    background: #191919;
-    text-align: center;
-    border-radius: 30px;
-    box-shadow: 12px 10px;
-}
-.box input[type = "text"], .box input[type = "password"]{
-    border: 0;
-    background: none;
-    text-align: center;
-    border: 2px solid #b36f18;
-    padding: 20px 10px;
-    width: 200px;
-    outline: none;
-    color: white;
-    border-radius: 24px;
-
-}
-#inputs{
-    margin-bottom: 25px;
-}
-.box h1{
-    color: rgb(199, 199, 199);
-}
-
-h2{
-font-size: 50px;
-font-family: sans-serif;
-} */
-
 *{
     margin:0;
     padding:0;
@@ -85,6 +43,7 @@ font-family: sans-serif;
   }
   .row{
   height: 100%;
+  margin-right: -16px;
   } 
   .subCont {
     position: relative;
@@ -174,4 +133,10 @@ font-family: sans-serif;
   input[type=number]::-webkit-outer-spin-button { 
     -webkit-appearance: none; 
     margin: 0; 
+  }
+  .g-recaptcha{
+ margin-top: 1em;
+ margin-left: 2.2em;
+/* margin-left: auto;
+margin-right: auto; */
   }
