--- a/pracownik.css
+++ b/pracownik.css
@@ -150,3 +150,9 @@ table.table .avatar {
     margin-top: 10px;
     font-size: 13px;
 }
+.alert{
+    margin-top: 5%;
+    width: 100%;
+    height: 3.3em;
+    text-align: center;
+  }
