--- a/pracownik.css
+++ b/pracownik.css
@@ -150,3 +150,11 @@ table.table .avatar {
     margin-top: 10px;
     font-size: 13px;
 }
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
