--- a/style_dashboard.css
+++ b/style_dashboard.css
@@ -70,6 +70,15 @@ body {
 .btn-outline-secondary{
 margin-top: 25px;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
   
   
     
