--- a/style_dashboard.css
+++ b/style_dashboard.css
@@ -120,3 +120,9 @@ display: none;
   background-color: #337ab7;
   border-color: #337ab7;
 }  
+#piechart_3d{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+
+}
