--- a/style_dashboard.css
+++ b/style_dashboard.css
@@ -126,3 +126,8 @@ display: none;
   margin-top: 60px;
 
 }
+#top_x_div{ /* wykres pojazdów*/
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+}
